--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,15 +27,27 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
+repositories {
+    maven { url 'https://jitpack.io' }
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation'com.squareup.okhttp3:okhttp:3.1.2'
+    implementation'com.squareup.okhttp3:logging-interceptor:3.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation files('libs\\ffmpeg.jar')
+    implementation files('libs\\ffmpeg-android-x86.jar')
+    implementation files('libs\\javacpp.jar')
+    implementation files('libs\\javacpp-platform.jar')
+    implementation files('libs\\javacv.jar')
+    implementation files('libs\\javacpp-platform.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
