+Added VideoActivity +Adding VideoCapture in VideoActivity +Added  FFmpegFrameGrabber to grab frames from video source +Added TensorFlowPoseDetector for Frame bitmap processing

--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,13 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        google()
+        flatDir {
+            dirs 'aar'
+        }
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
