--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,34 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    sourceSets {
+        main {
+
+            assets.srcDirs = ['assets']
+            jniLibs.srcDirs = ['libs']
+
+        }
+
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
+    }
 }
 repositories {
     maven { url 'https://jitpack.io' }
 }
-dependencies {
 
+allprojects {
+    repositories {
+        jcenter()
+        google()
+        flatDir {
+            dirs 'aar'
+        }
+    }
+}
+dependencies {
+    implementation(name: 'tensorflow', ext: 'aar')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
