--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:label="@string/app_name" android:name=".MainMenuActivity"/>
+        <activity android:label="@string/app_name" android:name=".VideoActivity"/>
     </application>
 
 </manifest>
