--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         <activity android:label="@string/app_name" android:name=".MainMenuActivity"/>
         <activity android:label="@string/app_name" android:name=".VideoActivity"/>
+        <activity android:label="@string/app_name" android:name=".EMonitorActivity"/>
     </application>
 
 </manifest>
